--- a/myapp/templates/myapp/success.html
+++ b/myapp/templates/myapp/success.html
@@ -1,16 +1,14 @@
-{% extends 'myapp/base.html' %} {% block content %}
-
+{% extends 'myapp/base.html' %}
+{% block content %}
 <div class="container my-5">
     <div class="row justify-content-center">
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
             <form action="{% url 'signout' %}" method="post">
-                {% csrf_token %} {{user}} successful login! {{id}}
-                <div class="pull-right">
-                    <button type="Submit" class="btn btn-success float-right">Sign out</button>
-                </div>
+                {% csrf_token %}
+                <h3>{{ user.username }} successful login!</h3>
+                <button type="submit" class="btn btn-success float-right">Sign out</button>
             </form>
         </div>
     </div>
-
 </div>
 {% endblock %}
