fixed seats and payments

--- a/myapp/templates/myapp/bus_confirmation.html
+++ b/myapp/templates/myapp/bus_confirmation.html
@@ -13,6 +13,10 @@
                         <p>{{ bus_number }}</p>
                     </div>
                     <div class="mb-3">
+                        <p class="fw-bold mb-1">Number of Seats:</p>
+                        <p>{{ seat_number }}</p>
+                    </div>
+                    <div class="mb-3">
                         <p class="fw-bold mb-1">From:</p>
                         <p>{{ from_route }}</p>
                     </div>
