--- a/myapp/templates/myapp/payment.html
+++ b/myapp/templates/myapp/payment.html
@@ -5,10 +5,11 @@
     <form method="post" action="{% url 'payment' %}">
         {% csrf_token %}
         <h5>Bus Number: {{ bus_number }}</h5>
+        <h5>Destination: {{ seat_number }}</h5>
         <h5>Source: {{ from_route }}</h5>
         <h5>Destination: {{ to_route }}</h5>
         <h5>Date of journey: {{ date_of_journey }}</h5>
-        <h5>Amount: 25$</h5>
+        <h5>Amount: {{ amount }}</h5>
         <button type="submit" class="btn btn-primary">Submit Payment</button>
     </form>
 </div>
