--- a/myapp/templates/myapp/reservation_success.html
+++ b/myapp/templates/myapp/reservation_success.html
@@ -14,6 +14,7 @@
             <p><strong>To:</strong> {{ destination }}</p>
             <p><strong>Date:</strong> {{ date }}</p>
             <p><strong>Bus Number:</strong> {{ bus_number }}</p>
+            <p><strong>No. Seats: </strong> {{ seat_number }} </p>
             <p><strong>Distance:</strong> {{ distance }} km</p>
             <p><strong>Payment Amount:</strong> {{ payment_amount }}</p>
         </div>
