fixing the data

--- a/myapp/templates/myapp/payment.html
+++ b/myapp/templates/myapp/payment.html
@@ -9,7 +9,7 @@
         <h5>Source: {{ from_route }}</h5>
         <h5>Destination: {{ to_route }}</h5>
         <h5>Date of journey: {{ date_of_journey }}</h5>
-        <h5>Amount: {{ amount }}</h5>
+        <h5>Amount: ${{ amount }}</h5>
         <button type="submit" class="btn btn-primary">Submit Payment</button>
     </form>
 </div>
