--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -202,8 +202,8 @@
             <a class="nav-item nav-link active" href="{% url 'home' %}">Home</a>
             <a class="nav-item nav-link" href="{% url 'signin' %}">Login</a>
             <a class="nav-item nav-link" href="{% url 'findbus' %}">Find Bus</a>
-            <a class="nav-item nav-link" href="{% url 'seebookings' %}"
-              >See Bookings</a
+            <a class="nav-item nav-link" href="{% url 'see_bookings' %}"
+              >View Bookings</a
             >
 
             {% if request.user.is_authenticated %}
