Changes in findBus, manage_buses

--- a/myapp/templates/myapp/findbus.html
+++ b/myapp/templates/myapp/findbus.html
@@ -17,6 +17,7 @@
                                 {% for option in options %}
                                     <option value="{{ option.0 }}">{{ option.1 }}</option>
                                 {% endfor %}
+                                <option selected>None</option>
                             </select>
                         </div>
 
@@ -26,6 +27,7 @@
                                 {% for option in options %}
                                     <option value="{{ option.0 }}">{{ option.1 }}</option>
                                 {% endfor %}
+                                <option selected>None</option>
                             </select>
                         </div>
 
